<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/delete_all_notes"
        android:title="@string/delete_all_notes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="never">

        <menu>
            <item android:id="@+id/menu_mad" android:title="@string/mad"/>
            <item android:id="@+id/menu_glad" android:title="@string/glad"/>
            <item android:id="@+id/menu_lonely" android:title="@string/lonely"/>
            <item android:id="@+id/menu_scared" android:title="@string/scared"/>
            <item android:id="@+id/menu_sad" android:title="@string/sad"/>
            <item android:id="@+id/menu_nofilter" android:title="@string/nofilter"/>
        </menu>

    </item>

</menu>