<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />


    <item
        android:id="@+id/action_delete_all_notes"
        android:title="@string/delete_all_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="never">

        <menu>

    <item
        android:id="@+id/action_no_filter"
        android:title="@string/nofilter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_mad"
        android:title="@string/mad"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_glad"
        android:title="@string/glad"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_lonely"
        android:title="@string/lonely"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_scared"
        android:title="@string/scared"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_sad"
        android:title="@string/sad"
        app:showAsAction="never" />

        </menu>

    </item>

</menu>