<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".AddEditNoteFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_add_edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="03.02.1991"
            android:textAlignment="viewEnd" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="76dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_situation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/situation"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="10dp" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_feelings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:padding="8dp"
                            android:text="@string/feelings"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <EditText
                            android:id="@+id/et_feelings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cg_emotions"
                            android:background="@color/colorWhite"
                            android:hint="@string/add_your_own"
                            android:inputType="textMultiLine|textCapSentences"
                            android:padding="8dp" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/cg_emotions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_feelings"
                            android:padding="8dp">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/c_mad"
                                style="@style/CustomChipStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mad" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/c_glad"
                                style="@style/CustomChipStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/glad" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/c_lonely"
                                style="@style/CustomChipStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lonely" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/c_scared"
                                style="@style/CustomChipStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scared" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/c_sad"
                                style="@style/CustomChipStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sad" />

                        </com.google.android.material.chip.ChipGroup>

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_in_the_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/in_the_body"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_wanted_to_do"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/wanted_to_do"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_what_does_the_feeling_mean"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/what_does_the_feeling_mean"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_thoughts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/thoughts"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_fears"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/fears"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_asking_from_hp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/asking_from_hp"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_inner_critic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:hint="@string/inner_critic"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <EditText
                        android:id="@+id/et_loving_parent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhite"
                        android:hint="@string/loving_parent"
                        android:inputType="textMultiLine|textCapSentences"
                        android:padding="8dp" />
                </androidx.cardview.widget.CardView>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:src="@drawable/ic_check_mark"
        app:backgroundTint="@color/colorRed"
        app:borderWidth="0dp"
        app:tint="@color/colorWhite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>