<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogfon"
    android:background="@drawable/dialog_fon"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/previewtext1"
            android:text="@string/preview1"
            android:layout_weight="15"
            android:textColor="@color/ACARed"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/img_swipe"
            android:src="@drawable/img_swipe"
            android:layout_weight="30"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/previewtext2"
            android:text="@string/preview2"
            android:layout_weight="15"
            android:textColor="@color/ACARed"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/img_add"
            android:src="@drawable/img_add"
            android:layout_weight="30"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:id="@+id/btncontinue"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/button_stroke_yellow_pressed_white"
            android:layout_weight="12"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:textSize="20dp"
            />

    </LinearLayout>

</LinearLayout>